# pico-sdk

./: .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
.github/workflows/: build-and-package.yml  build-and-publish.yml
common/: Cargo.toml  README.md
common/src/: cm3.rs  config.rs  drdaq.rs  driver.rs  enums.rs  error.rs  hrdl.rs  lib.rs  pl1000.rs  pt104.rs  range.rs  sig_gen.rs  status.rs  tc08.rs  time.rs  utils.rs
config/: Cargo.toml
config/examples/: test.rs
config/src/: error.rs  ext.rs  fuzzy.rs  lib.rs  value.rs
device/: Cargo.toml  README.md
device/src/: cm3.rs  drdaq.rs  hrdl.rs  lib.rs  oscilloscope.rs  pl1000.rs  pt104.rs  scope.rs  tc08.rs
dotnet/: Native.cs  PicoDevice.cs  PicoSDK.csproj  README.md
dotnet/example/: Program.cs  example.csproj
download/: Cargo.toml  README.md
download/examples/: generate-hashes.rs  generate-manifest.rs
download/src/: hashes.rs  lib.rs  manifest.rs  paths.rs
driver/: Cargo.toml  README.md
driver/src/: cm3.rs  common.rs  dependencies.rs  drdaq.rs  hrdl.rs  kernel_driver.rs  lib.rs  pl1000.rs  ps2000.rs  ps2000a.rs  ps3000a.rs  ps4000.rs  ps4000a.rs  ps5000a.rs  ps6000.rs  ps6000a.rs  psospa.rs  pt104.rs  resolution.rs  tc08.rs  utils.rs
driver/src/common/: driver.rs  loader.rs
driver/src/oscilloscope/: dependencies.rs  mod.rs  ps2000.rs  ps2000a.rs  ps3000a.rs  ps4000.rs  ps4000a.rs  ps5000a.rs  ps6000.rs  ps6000a.rs  psospa.rs  trampoline.rs
driver/src/ps2000/: driver.rs  loader.rs
driver/src/resolution/: dependency_loader.rs  mod.rs
enumeration/: Cargo.toml  README.md
enumeration/examples/: enumerate.rs
enumeration/src/: error.rs  extend.rs  helpers.rs  lib.rs
nodejs/: .npmignore  README.md  example.js  package.json  tsconfig.json
nodejs/src/: index.ts  lazy.ts  native.ts  pico-device.ts
python/: LICENSE  README.md  example.py  setup.py
python/pico_sdk/: __init__.py
rust/common/: Cargo.toml  README.md
rust/common/src/: driver.rs  lib.rs  utils.rs
rust/device/: Cargo.toml
rust/download/: Cargo.toml
rust/download/src/: hashes.rs  lib.rs  paths.rs
rust/driver/: Cargo.toml
rust/driver/src/: kernel_driver.rs  lib.rs
rust/driver/src/common/: driver.rs  loader.rs  mod.rs
rust/driver/src/ps2000/: driver.rs  loader.rs
rust/enumeration/: Cargo.toml  README.md
rust/enumeration/src/: helpers.rs  lib.rs
rust/native/: Cargo.toml  README.md  build.rs
rust/native/src/: helpers.rs  lib.rs
rust/sdk/: Cargo.toml  README.md
rust/sdk/examples/: enumerate.rs  streaming_cli.rs
rust/sdk/src/: lib.rs
rust/sdk/tests/: enum_and_configure_device.rs  stream_data.rs
rust/streaming/: Cargo.toml
rust/streaming/src/: lib.rs
scripts/: build.js  package.js  publish.js  set-version.js  tools.js
sdk/: Cargo.toml  README.md
sdk/examples/: enum_config_stream_cli.rs  enumerate.rs  open.rs  state.rs  streaming_cli.rs  tc08.rs
sdk/src/: lib.rs
sdk/tests/: enum_and_configure_device.rs  load_drivers.rs  stream_data.rs
streaming/: Cargo.toml  README.md
streaming/src/: cm3.rs  drdaq.rs  events.rs  hrdl.rs  lib.rs  oscilloscope.rs  periodic.rs  pl1000.rs  pt104.rs  scope.rs  state.rs  tc08.rs
streaming/src/state/: events.rs  mod.rs
streaming/tests/: stream.rs
sys/: Cargo.toml  README.md  build.rs.old
sys/src/: drdaq.rs  lib.rs  picohrdl.rs  pl1000.rs  plcm3.rs  ps2000.rs  ps2000a.rs  ps3000.rs  ps3000a.rs  ps4000.rs  ps4000a.rs  ps5000.rs  ps5000a.rs  ps6000.rs  ps6000a.rs  psospa.rs  pt104.rs  tc08.rs
