[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2021"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-common"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.4.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
enum-iterator = "0.6"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "^1.0"
tracing = "0.1"
