[package]
name = "pico-config"
version = "0.4.0"
edition = "2021"

[dependencies]
pico-common = {path = "../common", version = "0.4.0"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uncased = { version = "0.9", default-features = false, features = ["with-serde-alloc"] }
fuzzy-matcher = "0.3"