[package]
name = "pico-config"
version = "0.4.0"
edition = "2021"

[dependencies]
pico-common = {path = "../common", version = "0.4.0"}
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uncased = { version = "0.9", default-features = false, features = ["with-serde-alloc"] }
fuzzy-matcher = "0.3"

[dev-dependencies]
serde_json = "1"