[package]
authors = ["Tim Fish"]
license = "MIT"
name = "pico-device"
version = "0.1.0"
edition = "2018"
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology" ]
repository = "https://github.com/meatysolutions/pico-sdk"
readme = "README.md"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
pico-common = { path = "../common" }
pico-driver = { path = "../driver" }
parking_lot = "0.11"
log-derive = "0.3"
log = "^0.4"