[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-device"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.2.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.2.0"}
pico-driver = {path = "../driver", version = "0.2.0"}
serde = {version = "1.0", features = ["derive", "rc"], optional = true}
tracing = {version = "0.1", features = ["attributes"]}
