[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-download"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.3.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
directories = "3.0"
http_req = "^0.7"
pico-common = {path = "../common", version = "0.3.0"}
pico-driver = {path = "../driver", version = "0.3.0"}
ring = "0.16"
thiserror = "^1.0"

[dev-dependencies]
enum-iterator = "0.6.0"
