[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2021"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-download"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.4.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
directories = "6.0"
http_req = "0.14"
pico-common = {path = "../common", version = "0.4.0"}
pico-driver = {path = "../driver", version = "0.4.0"}
ring = "0.17"
thiserror = "2"

[dev-dependencies]
enum-iterator = "2"
# Only used by the `generate-manifest` example, which unpacks Pico's public installers
# (Windows .exe/MSI, macOS .pkg, Linux .deb) at release time. None of this reaches consumers.
apple-xar = {version = "0.20", default-features = false}
ar = "0.9"
cab = "0.6"
cpio-archive = "0.10"
flate2 = "1"
msi = "0.10"
tar = "0.4"
xz2 = "0.1"

[[example]]
name = "generate-manifest"
path = "examples/generate-manifest.rs"
