[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2021"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-driver"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.4.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
c_vec = "2.0"
lazy_static = "1.4"
libloading = "0.7"
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.4.0"}
pico-sys-dynamic = {path = "../sys", version = "0.4.0"}
thiserror = "^1.0"
tracing = {version = "0.1", features = ["attributes"]}
version-compare = "0.0.11"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["setupapi", "impl-default"]}
