[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-enumeration"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.2.2"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.2.2"}
pico-device = {path = "../device", version = "0.2.2"}
pico-driver = {path = "../driver", version = "0.2.2"}
rayon = "1.3"
serde = {version = "1.0", features = ["derive"], optional = true}
thiserror = "1.0"
tracing = {version = "0.1", features = ["attributes"]}
usb_enumeration = "0.1.0"

[dev-dependencies]
pico-download = {path = "../download"}
