[package]
authors = ["Tim Fish"]
license = "MIT"
name = "pico-sdk"
version = "0.1.0"
edition = "2018"
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology" ]
repository = "https://github.com/meatysolutions/pico-sdk"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
pico-common = { path = "../common" }
pico-driver = { path = "../driver" }
pico-download = { path = "../download" }
pico-device = { path = "../device"}
pico-enumeration = {path ="../enumeration"}
pico-streaming = {path ="../streaming"}

[dev-dependencies]
rayon = "1.3.0"
console = "0.11"
dialoguer = "0.6"
anyhow = "1.0"
signifix = "0.10"