[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-streaming"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.2.0"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
crossbeam = "0.8"
parking_lot = {version = "0.11", features = ["serde"]}
pico-common = {path = "../common", version = "0.2.0"}
pico-device = {path = "../device", version = "0.2.0"}
pico-driver = {path = "../driver", version = "0.2.0"}
serde = {version = "1.0", features = ["derive", "rc"], optional = true}
tracing = {version = "0.1", features = ["attributes"]}

[dev-dependencies]
mockall = {version = "0.9"}
tracing-subscriber = "0.2"
