[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-common"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.4"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
enum-iterator = "0.6.0"
log = "0.4"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "^1.0.9"
