[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-device"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.1"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
log = "^0.4"
log-derive = "0.3"
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.1.1"}
pico-driver = {path = "../driver", version = "0.1.1"}
