[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-download"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.1"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
directories = "3.0"
http_req = "^0.7.0"
pico-common = {path = "../common", version = "0.1.1"}
pico-driver = {path = "../driver", version = "0.1.1"}
ring = "0.16.15"
thiserror = "^1.0.9"

[dev-dependencies]
enum-iterator = "0.6.0"
