[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-driver"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.2"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
c_vec = "1.3"
lazy_static = "1.4"
libffi = "1.0.0"
libloading = "0.6.2"
log = "^0.4"
log-derive = "0.3"
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.1.2"}
thiserror = "^1.0.9"
version-compare = "0.0.10"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["setupapi", "impl-default"]}
