[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-enumeration"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.2"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
log = "0.4"
log-derive = "0.3"
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.1.2"}
pico-device = {path = "../device", version = "0.1.2"}
pico-driver = {path = "../driver", version = "0.1.2"}
rayon = "1.3.0"
thiserror = "^1.0.9"
usb_enumeration = "0.0.3"

[dev-dependencies]
pico-download = {path = "../download"}
