[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-native"
publish = false
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow = "^1.0.25"
lazy_static = "1.4"
parking_lot = "0.11"
pico-sdk = {path = "../sdk", version = "0.1.1"}

[build-dependencies]
cbindgen = "0.14.2"
