[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-sdk"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.1"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
pico-common = {path = "../common", version = "0.1.1"}
pico-device = {path = "../device", version = "0.1.1"}
pico-download = {path = "../download", version = "0.1.1"}
pico-driver = {path = "../driver", version = "0.1.1"}
pico-enumeration = {path = "../enumeration", version = "0.1.1"}
pico-streaming = {path = "../streaming", version = "0.1.1"}

[dev-dependencies]
anyhow = "1.0"
console = "0.11"
dialoguer = "0.6"
rayon = "1.3.0"
signifix = "0.10"
