[package]
authors = ["Tim Fish"]
description = "Unofficial Rust bindings and wrappers for Pico Technology oscilloscope drivers"
edition = "2018"
keywords = ["Oscilloscope", "Streaming", "PicoScope", "Pico-Technology"]
license = "MIT"
name = "pico-streaming"
readme = "README.md"
repository = "https://github.com/meatysolutions/pico-sdk"
version = "0.1.1"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
crossbeam = "0.8"
double_decker = "0.0.3"
log = "0.4"
log-derive = "0.3"
parking_lot = "0.11"
pico-common = {path = "../common", version = "0.1.1"}
pico-device = {path = "../device", version = "0.1.1"}
pico-driver = {path = "../driver", version = "0.1.1"}

[dev-dependencies]
mockall = {version = "0.8.1"}
